<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_KVM_AC" Id="{196f1004-b8f7-43cc-80d7-e27246a1565f}">
    <Declaration><![CDATA[TYPE ST_KVM_AC :
STRUCT
	boAC			: ARRAY[0..KVM.uiNumOfBool] OF BOOL;
	wAC				: ARRAY[0..KVM.uiNumOfWord] OF WORD;
	lrAC			: ARRAY[0..KVM.uiNumOfDouble] OF LREAL;
	
	sboACComments	: ARRAY[0..KVM.uiNumOfBool] OF STRING(30);
	swACComments	: ARRAY[0..KVM.uiNumOfWord] OF STRING(30);
	slrACComments	: ARRAY[0..KVM.uiNumOfDouble] OF STRING(30);
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>