<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="AXIS" Id="{c4163a42-c1f4-4466-8eb8-27bdfd8d552b}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	stAxis1 : AXIS_REF;
	stAxis2 : AXIS_REF;
	stAxis3 : AXIS_REF;
	stAxis4 : AXIS_REF;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>